--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -209,7 +209,7 @@ layout: default
         repo: 'NikFranki.github.io',
         owner: 'NikFranki',
         admin: ['NikFranki'],
-        id: location.pathname,      // Ensure uniqueness and length less than 50
+        id: decodeURI(window.location.pathname),      // Ensure uniqueness and length less than 50
         distractionFreeMode: false  // Facebook-like distraction free mode
     })
 
