--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -114,6 +114,23 @@ layout: default
 
             </div>
 
+    <!-- Side Catalog Container -->
+        {% if page.catalog %}
+            <div class="
+                col-lg-2 col-lg-offset-0
+                visible-lg-block
+                sidebar-container
+                catalog-container">
+                <div class="side-catalog">
+                    <hr class="hidden-sm hidden-xs">
+                    <h5>
+                        <a class="catalog-toggle" href="#">CATALOG</a>
+                    </h5>
+                    <ul class="catalog-body"></ul>
+                </div>
+            </div>
+        {% endif %}
+
     <!-- Sidebar Container -->
             <div class="
                 col-lg-8 col-lg-offset-2
@@ -308,56 +325,6 @@ layout: default
             $(document).scroll(function(){
                 $(".img-modal-container").remove();
             });
-        });
-    })();
-</script>
-
-<!-- catelog -->
-<script>
-    (function() {
-        const ipad_pro_width = 1024;
-        var is_mobile = /Android|iPhone|SymbianOS|Windows Phone|iPad|iPod/g.test(navigator.userAgent);
-        var is_pc = !is_mobile && $('body').width() > ipad_pro_width;
-        if (!is_pc) {
-            return;
-        }
-        $('#markdown-toc').addClass('pc');
-        var INIT_TOC_HEIGHT = $('.intro-header').height() + 50;
-        $('body').ready(function(params) {
-            $('#markdown-toc').attr("style", 'top:' + INIT_TOC_HEIGHT + 'px;');
-            locateCatelogList();
-        });
-        function locateCatelogList(event) {
-            // article 目录集合
-            var alis = $('article :header');
-            // 侧边栏目录集合
-            var sidebar_alis = $('#markdown-toc').find('a');
-            // 获取滚动条到顶部的距离
-            var scroll_height = $(window).scrollTop();
-            for (var i = 0; i < alis.length; i++) {
-                var a_height = Math.floor($(alis[i]).offset().top);
-                // 滚动的位置大于当前标题距离顶部的位置
-                if (a_height <= scroll_height) {
-                    sidebar_alis.removeClass('list_click');
-                    $(sidebar_alis[i]).addClass('list_click');
-                }
-                // 滚动条滚动的高度小于第一个标题距离顶部的位置
-                if (scroll_height <= $(alis[0]).offset().top) {
-                    sidebar_alis.removeClass('list_click');
-                    $(sidebar_alis[0]).addClass('list_click');
-                }
-            }
-            if (scroll_height < INIT_TOC_HEIGHT) {
-                $('#markdown-toc').removeClass('fixed');
-                const posTop = INIT_TOC_HEIGHT - scroll_height + 'px;';
-                $('#markdown-toc').attr("style", 'top:' + posTop);
-            } else {
-                $('#markdown-toc').removeAttr("style");
-                $('#markdown-toc').addClass('fixed');
-            }
-        }
-        $(function() {
-            $(window).bind('scroll', locateCatelogList); 
         });
     })();
 </script>
